@@ -878,3 +878,8 @@
 	* Function 'amd_inst_FETCH_impl()' extended, providing support for more data formats.
 	* Functions 'amd_inst_SET???_impl()' and 'amd_inst_SET???_DX10_impl()'
 	* Functions 'amd_inst_CND???_impl()'
+	* Evergreen Instructions COS/SIN/FRACT
+
+2010-05-11
+	* src/libcpuarch: Library 'libcpuarch' created, including all files used in the main
+		'src' directory, except those generating executables.
